RESOLVED FIXED89922
[chromium] CCOverdrawMetrics should use the deviceViewportSize to count actual pixels
https://bugs.webkit.org/show_bug.cgi?id=89922
Summary [chromium] CCOverdrawMetrics should use the deviceViewportSize to count actua...
Dana Jansens
Reported 2012-06-25 16:59:34 PDT
[chromium] CCOverdrawMetrics should use the deviceViewportSize to count actual pixels
Attachments
Patch (4.04 KB, patch)
2012-06-25 17:23 PDT, Dana Jansens
no flags
Dana Jansens
Comment 1 2012-06-25 17:23:37 PDT
Created attachment 149404 [details] Patch Our histograms will be super skewed on hidpi devices without this, so I'd like to backport this to m21.
Adrienne Walker
Comment 2 2012-06-25 17:33:29 PDT
Comment on attachment 149404 [details] Patch R=me.
WebKit Review Bot
Comment 3 2012-06-25 20:31:14 PDT
Comment on attachment 149404 [details] Patch Rejecting attachment 149404 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: esting/gmock --revision 405 --non-interactive --force --accept theirs-conflict --ignore-externals returned non-zero exit status 1 in /mnt/git/webkit-commit-queue/Source/WebKit/chromium Error: 'depot_tools/gclient sync --force --reset --delete_unversioned_trees' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 113. Re-trying 'depot_tools/gclient sync --force --reset --delete_unversioned_trees' Died at /mnt/git/webkit-commit-queue/Tools/Scripts/webkitdirs.pm line 2529. Full output: http://queues.webkit.org/results/13100286
Dana Jansens
Comment 4 2012-06-25 20:39:00 PDT
Comment on attachment 149404 [details] Patch trying again
WebKit Review Bot
Comment 5 2012-06-25 21:15:13 PDT
Comment on attachment 149404 [details] Patch Clearing flags on attachment: 149404 Committed r121224: <http://trac.webkit.org/changeset/121224>
WebKit Review Bot
Comment 6 2012-06-25 21:15:17 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.