[chromium] CCOverdrawMetrics should use the deviceViewportSize to count actual pixels https://bugs.webkit.org/show_bug.cgi?id=89922

Reviewed by Adrienne Walker.

* platform/graphics/chromium/cc/CCOverdrawMetrics.cpp:
(WebCore::CCOverdrawMetrics::recordMetricsInternal):


Canonical link: https://commits.webkit.org/107794@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121224 268f45cc-cd09-0410-ab3c-d52691b4dbfc